# SerialClient

./: README.md  pyproject.toml
serial_client/: __init__.py  aioserial.py  async_client.py  thread_client.py
